--- a/index.html
+++ b/index.html
@@ -15,6 +15,129 @@
     <title>My Landing Page</title>
   </head>
   <body>
-    <nav></nav>
+    <!-- Navbar -->
+    <nav>
+      <div class="logo">
+        <img src="https://randomuser.me/api/portraits/men/76.jpg" alt="user" />
+      </div>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contact Me</a></li>
+      </ul>
+    </nav>
+
+    <!-- Page Content -->
+    <header>
+      <button id="toggle" class="toggle">
+        <i class="fa fa-bars fa-2x"></i>
+      </button>
+
+      <h1>My Landing Page</h1>
+
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, itaque?
+      </p>
+
+      <button class="cta-btn" id="open">Sign Up</button>
+    </header>
+
+    <main class="container">
+      <h2>What is this landing page about</h2>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, eveniet?
+        Iste reprehenderit architecto eaque autem, enim molestias in ipsa omnis
+        tempora nihil facere est rerum illum itaque corporis exercitationem
+        pariatur.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum tenetur
+        atque quo mollitia a earum vero obcaecati assumenda necessitatibus nemo!
+      </p>
+
+      <h2>Tell me more</h2>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi ut quas
+        minus et obcaecati nobis laboriosam aliquid similique, reiciendis rem
+        dicta, quos assumenda eveniet voluptatem fugit praesentium cumque
+        blanditiis veritatis laudantium. Distinctio, libero nostrum pariatur
+        expedita explicabo praesentium aliquam natus!
+      </p>
+
+      <h2>Benefits</h2>
+      <ul>
+        <li>Lifetime Access</li>
+        <li>30 Day Money Back</li>
+        <li>Tailored Customer Support</li>
+      </ul>
+
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab, quaerat
+        saepe! Voluptas nostrum, in dicta deserunt tempore laborum ut officia?
+        Repellendus sint, laudantium delectus, perferendis quos maiores ut
+        magnam ea blanditiis error, quasi iste mollitia sequi? Itaque assumenda
+        facilis impedit veniam dolorem, ipsa laborum placeat. Odit molestiae
+        repudiandae ex aperiam suscipit vel impedit autem excepturi praesentium
+        amet optio alias harum eum mollitia accusamus voluptate, dolore veniam
+        explicabo! Esse, ducimus eligendi.
+      </p>
+    </main>
+
+    <!-- Modal -->
+    <div class="modal-container" id="modal">
+      <div class="modal">
+        <button class="close-btn" id="close">
+          <i class="fa fa-times"></i>
+        </button>
+        <div class="modal-header">
+          <h3>Sign Up</h3>
+        </div>
+        <div class="modal-content">
+          <p>Register with us to get offers, support and more</p>
+          <form class="modal-form">
+            <div>
+              <label for="name">Name:</label>
+              <input
+                type="text"
+                id="name"
+                name="name"
+                placeholder="Enter name"
+              />
+            </div>
+            <div>
+              <label for="email">Email:</label>
+              <input
+                type="email"
+                id="email"
+                name="email"
+                placeholder="Enter email"
+              />
+            </div>
+            <div>
+              <label for="password">Password:</label>
+              <input
+                type="password"
+                id="password"
+                name="password"
+                placeholder="Enter password"
+              />
+            </div>
+            <div>
+              <label for="password2">Confirm Password:</label>
+              <input
+                type="password"
+                id="password2"
+                name="password2"
+                placeholder="Confirm password"
+              />
+            </div>
+            <input type="submit" value="Submit" class="submit-btn" />
+          </form>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
