Added a form-input class to all of the inputs of the sign up form in the modal

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
               <label for="name">Name:</label>
               <input
                 type="text"
+                class="form-input"
                 id="name"
                 name="name"
                 placeholder="Enter name"
@@ -111,6 +112,7 @@
               <label for="email">Email:</label>
               <input
                 type="email"
+                class="form-input"
                 id="email"
                 name="email"
                 placeholder="Enter email"
@@ -120,6 +122,7 @@
               <label for="password">Password:</label>
               <input
                 type="password"
+                class="form-input"
                 id="password"
                 name="password"
                 placeholder="Enter password"
@@ -129,6 +132,7 @@
               <label for="password2">Confirm Password:</label>
               <input
                 type="password"
+                class="form-input"
                 id="password2"
                 name="password2"
                 placeholder="Confirm password"
